# qkquant

./: .gitignore  README.md  fix_cursor_roaming.ps1  migrate_cursor.ps1  pyproject.toml
.claude/: settings.json  settings.local.json
config/: ai.yaml  cooldown.yaml  settings.yaml
config/strategies/: grid_trading.yaml  ma_boll.yaml  ma_breakout.yaml  momentum.yaml  momentum_breakout.yaml  relative_strength.yaml
docs/: STRATEGY.md
scripts/: combo_test.py  daily_scan.ps1  fetch_eps.py  grid_sweep.py  ma_boll_experiment.py  ma_boll_sweep.py  sensitivity_test.py  signal_performance.py
src/qkquant/: __init__.py  cli.py  config.py  logger.py  notify.py  scan.py  watchlist.py
src/qkquant/ai/: __init__.py  analyzer.py  base.py  prompt.py
src/qkquant/ai/providers/: __init__.py  noop.py  openai_compatible.py
src/qkquant/backtest/: datafeed.py  engine.py  report.py
src/qkquant/broker/: __init__.py  base.py
src/qkquant/factors/: __init__.py  ic.py  indicators.py  library.py  pipeline.py  report.py  runner.py
src/qkquant/risk/: __init__.py  base.py  config.py  manager.py  rules.py
src/qkquant/strategy/: __init__.py  base.py  grid_trading.py  ma_boll.py  ma_breakout.py  momentum.py  momentum_breakout.py  registry.py  relative_strength.py
tests/: conftest.py  test_ai_analysis.py  test_factor_ic.py  test_factor_library.py  test_fetcher_utils.py  test_indicators.py  test_other_strategies.py  test_risk_manager.py  test_risk_rules.py  test_storage.py  test_strategy_ma_breakout.py
