[project]
name = "qkquant"
version = "0.1.0"
description = "A股量化交易 MVP：数据层 + 回测引擎 + 策略框架"
readme = "README.md"
requires-python = ">=3.12,<3.13"
authors = [{ name = "qkquant" }]
license = { text = "MIT" }

dependencies = [
    "pandas>=2.2,<3.0",
    "numpy>=1.26,<2.0",
    "duckdb>=1.1.0",
    "akshare>=1.16.0",
    "baostock>=0.8.9",
    "backtrader>=1.9.78",
    "matplotlib>=3.8",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "pyyaml>=6.0",
    "loguru>=0.7",
    "typer>=0.12",
    "rich>=13.7",
    "tenacity>=8.3",
    "tqdm>=4.66",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
]

[project.scripts]
qkquant = "qkquant.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/qkquant"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]
